Add statement uload
